minor html changes, revised js, logs added for validation issue on mobile

--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@ a:hover {
   width: 200px;
   height: 200px;
   padding: 30px;
+  border-radius: 40px;
 }
 
 #photo-text, #about-me-text, #ContactUs-FormTitle, #contact-section {
@@ -198,18 +199,26 @@ a:hover {
 }
 
 #submitButton {
-  font-size: 20px;
-  color:#00FF00;
-  border-color:#FF0000;
-  background-color: #000000;
-  border-radius: 10px;
-  height: 30px;
-  width: 100px;
+  font-size: 30px;
+  color:#000000;
+  border-color:#00FF00;
+  background-color: #91ffa7;
+  border-radius: 30px;
+  height: 40px;
+  width: 180px;
 }
 
 #message-error {
   color: #FF0000;
   font-size: 30px;
+}
+
+.error {
+  background-color: #91ffa7;
+  height: 24px;
+  width: 300px;
+  border-radius: 10px;
+  border: 2px solid #FF0000;
 }
 
 #welcomeMsg {
